[gd_scene load_steps=13 format=3 uid="uid://dwjmje0gkwliq"]

[ext_resource type="TileSet" uid="uid://bph8khkfunyrp" path="res://scenes/levels/resources/tiles.tres" id="1_b632b"]
[ext_resource type="Script" path="res://scenes/levels/scripts/level_6.gd" id="1_ffdfv"]
[ext_resource type="PackedScene" uid="uid://bxqg0b4ysehvc" path="res://scenes/objects/death_area.tscn" id="2_ft3n3"]
[ext_resource type="PackedScene" uid="uid://b60pklhxaq0wd" path="res://scenes/objects/movable_platform.tscn" id="3_gq5gt"]
[ext_resource type="PackedScene" uid="uid://b6t1fmlc7s4og" path="res://scenes/player/player.tscn" id="4_njw5h"]
[ext_resource type="PackedScene" uid="uid://ckl0n7ot1qvna" path="res://scenes/utils/multitarget_camera.tscn" id="6_k34vj"]
[ext_resource type="PackedScene" uid="uid://cvqxnue1nuibu" path="res://scenes/objects/removable_platform.tscn" id="7_g485n"]
[ext_resource type="PackedScene" uid="uid://cxydg1uj28ux8" path="res://scenes/objects/block.tscn" id="8_cg17j"]
[ext_resource type="PackedScene" uid="uid://ca3ykvqmarsvn" path="res://scenes/objects/button.tscn" id="9_5dc32"]
[ext_resource type="PackedScene" uid="uid://dyb0fht7d2j5b" path="res://scenes/objects/checkpoint.tscn" id="10_tno7l"]
[ext_resource type="PackedScene" uid="uid://dytd5g5foi3ka" path="res://scenes/objects/player_gate.tscn" id="11_6oit1"]
[ext_resource type="PackedScene" uid="uid://jqpxcgo7u3dk" path="res://scenes/objects/goal.tscn" id="12_khpiu"]

[node name="Level_6" type="Node2D"]
script = ExtResource("1_ffdfv")
metadata/_edit_horizontal_guides_ = [1280.0, -256.0]
metadata/_edit_vertical_guides_ = [2240.0, -5880.0]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_b632b")
format = 2
layer_0/tile_data = PackedInt32Array(1048580, 131073, 2, 983044, 131073, 0, 1048579, 65537, 2, 983043, 65537, 0, 1048578, 65537, 2, 983042, 65537, 0, 1048577, 65537, 2, 983041, 65537, 0, 1048576, 1, 2, 983040, 1, 0, 1048602, 65537, 2, 983066, 65537, 0, 1048601, 1, 2, 983065, 1, 0, 1048605, 131073, 2, 983069, 131073, 0, 1048604, 65537, 2, 983068, 65537, 0, 1048603, 65537, 2, 983067, 65537, 0, 786447, 65537, 2, 720911, 65537, 0, 786446, 65537, 2, 720910, 65537, 0, 786445, 65537, 2, 720909, 65537, 0, 786448, 65537, 2, 720912, 65537, 0, 524300, 131073, 2, 458764, 131073, 0, 524299, 65537, 2, 458763, 65537, 0, 524298, 65537, 2, 458762, 65537, 0, 524297, 65537, 2, 458761, 65537, 0, 524308, 65537, 2, 458772, 65537, 0, 524307, 65537, 2, 458771, 65537, 0, 524306, 65537, 2, 458770, 65537, 0, 524305, 1, 2, 458769, 1, 0, 786444, 1, 2, 720908, 1, 0, 786449, 131073, 2, 720913, 131073, 0, 524296, 1, 2, 458760, 1, 0, 524309, 65537, 2, 458773, 65537, 0, 524290, 131073, 2, 458754, 131073, 0, 524289, 65537, 2, 458753, 65537, 0, 524288, 65537, 2, 458752, 65537, 0, 589823, 1, 2, 524287, 1, 0, 458746, 65537, 2, 393210, 65537, 0, 458745, 65537, 2, 393209, 65537, 0, 458734, 65537, 2, 393198, 65537, 0, 458733, 1, 2, 393197, 1, 0, 655335, 65537, 2, 589799, 65537, 0, 655334, 65537, 2, 589798, 65537, 0, 655333, 65537, 2, 589797, 65537, 0, 655332, 65537, 2, 589796, 1, 65538, 655331, 65537, 2, 589795, 131073, 65538, 655330, 1, 65536, 589794, 65537, 0, 655329, 1, 1, 589793, 1, 0, 458735, 131073, 2, 393199, 131073, 0, 458744, 1, 2, 393208, 1, 0, 458747, 65537, 2, 393211, 65537, 0, 458748, 131073, 2, 393212, 131073, 0, 524260, 131073, 1, 458724, 131073, 1, 524259, 1, 1, 458723, 1, 1, 655318, 65537, 2, 589782, 1, 65538, 524246, 131073, 1, 458710, 131073, 1, 393174, 131073, 1, 327638, 131073, 1, 655317, 1, 2, 589781, 1, 1, 524245, 1, 1, 458709, 1, 1, 393173, 1, 1, 327637, 1, 1, 655320, 131073, 1, 589784, 131073, 0, 655319, 131073, 65536, 589783, 65537, 0, 262102, 131073, 1, 196566, 131073, 0, 262101, 131073, 65536, 196565, 65537, 0, 393188, 131073, 0, 393187, 1, 0, 196570, 131073, 1, 131034, 131073, 1, 65498, 131073, 1, -38, 131073, 0, 196569, 1, 1, 131033, 1, 1, 65497, 1, 1, -39, 1, 0, 262100, 65537, 2, 196564, 65537, 0, 262099, 65537, 2, 196563, 65537, 0, 262098, 1, 2, 196562, 1, 0, 655336, 65537, 2, 589800, 65537, 0, 655337, 131073, 2, 589801, 131073, 0, 1114072, 131073, 1, 1048536, 131073, 0, 786392, 131073, 2, 720856, 131073, 1, 1114071, 1, 1, 1048535, 1, 0, 786391, 1, 2, 720855, 1, 1, 1114082, 131073, 1, 1048546, 131073, 1, 786402, 131073, 1, 720866, 131073, 1, 1114081, 1, 1, 1048545, 1, 1, 786401, 1, 1, 720865, 1, 1, 1245154, 131073, 2, 1179618, 131073, 1, 1245153, 65537, 2, 1179617, 131073, 65538, 1245152, 65537, 2, 1179616, 65537, 0, 1245151, 65537, 2, 1179615, 65537, 0, 1245150, 65537, 2, 1179614, 65537, 0, 1245149, 65537, 2, 1179613, 65537, 0, 1245148, 65537, 2, 1179612, 65537, 0, 1245147, 65537, 2, 1179611, 65537, 0, 1245146, 65537, 2, 1179610, 65537, 0, 1245145, 65537, 2, 1179609, 65537, 0, 1245144, 65537, 2, 1179608, 1, 65538, 1245143, 1, 2, 1179607, 1, 1, 983010, 131073, 1, 917474, 131073, 1, 851938, 131073, 1, 983009, 1, 1, 917473, 1, 1, 851937, 1, 1, 524207, 131073, 2, 458671, 131073, 0, 524206, 65537, 2, 458670, 65537, 0, 524205, 65537, 2, 458669, 65537, 0, 524204, 65537, 2, 458668, 65537, 0, 524203, 65537, 2, 458667, 65537, 0, 524202, 65537, 2, 458666, 65537, 0, 524201, 65537, 2, 458665, 65537, 0, 524200, 65537, 2, 458664, 65537, 0, 524199, 65537, 2, 458663, 65537, 0, 524198, 65537, 2, 458662, 65537, 0, 524197, 1, 2, 458661, 1, 0, 524317, 131073, 2, 458781, 131073, 0, 524316, 65537, 2, 458780, 65537, 0, 524315, 65537, 2, 458779, 65537, 0, 524314, 65537, 2, 458778, 65537, 0, 524313, 65537, 2, 458777, 65537, 0, 524312, 65537, 2, 458776, 65537, 0, 524311, 65537, 2, 458775, 65537, 0, 524310, 65537, 2, 458774, 65537, 0, 327642, 131073, 1, 262106, 131073, 1, 327641, 1, 1, 262105, 1, 1, 393178, 131073, 2, 393177, 1, 2)

[node name="MultitargetCamera" parent="." instance=ExtResource("6_k34vj")]
position = Vector2(168, 784)
limit_left = -5880
limit_top = -256
limit_right = 2240
limit_bottom = 1280

[node name="DeathArea" parent="." instance=ExtResource("2_ft3n3")]
position = Vector2(-1656, 1280)
scale = Vector2(591.107, 6.16077)

[node name="RemovablePlatform" parent="." instance=ExtResource("7_g485n")]
position = Vector2(960, 240)

[node name="Block" parent="." instance=ExtResource("8_cg17j")]
position = Vector2(960, 144)

[node name="Button" parent="." instance=ExtResource("9_5dc32")]
position = Vector2(672, 416)
player_target = 1

[node name="MovablePlatform" parent="." node_paths=PackedStringArray("from", "to") instance=ExtResource("3_gq5gt")]
position = Vector2(512, 992)
from = NodePath("Marker2D")
to = NodePath("Marker2D2")
duration = 10.0

[node name="Marker2D" type="Marker2D" parent="MovablePlatform"]

[node name="Marker2D2" type="Marker2D" parent="MovablePlatform"]
position = Vector2(896, 0)

[node name="MovablePlatform2" parent="." node_paths=PackedStringArray("from", "to") instance=ExtResource("3_gq5gt")]
position = Vector2(2040, 368)
from = NodePath("Marker2D")
to = NodePath("Marker2D2")
duration = 10.0

[node name="Marker2D" type="Marker2D" parent="MovablePlatform2"]

[node name="Marker2D2" type="Marker2D" parent="MovablePlatform2"]
position = Vector2(0, 696)

[node name="P1Checkpoint1" parent="." instance=ExtResource("10_tno7l")]
position = Vector2(-312, 328)
player_target = 1

[node name="P2Checkpoint1" parent="." instance=ExtResource("10_tno7l")]
position = Vector2(-400, 328)
player_target = 2

[node name="PlayerGate" parent="." instance=ExtResource("11_6oit1")]
position = Vector2(-2240, 352)
gate_length = 800.0
player_target = 2

[node name="RemovablePlatform2" parent="." instance=ExtResource("7_g485n")]
position = Vector2(-1680, 72)

[node name="Block2" parent="." instance=ExtResource("8_cg17j")]
position = Vector2(-1680, -24)

[node name="Button2" parent="." instance=ExtResource("9_5dc32")]
position = Vector2(-2816, 96)

[node name="GateButton" parent="." instance=ExtResource("9_5dc32")]
position = Vector2(-2576, 480)
player_target = 2

[node name="MovablePlatform3" parent="." node_paths=PackedStringArray("from", "to") instance=ExtResource("3_gq5gt")]
position = Vector2(-3560, 1008)
from = NodePath("Marker2D")
to = NodePath("Marker2D2")
duration = 9.0

[node name="Marker2D" type="Marker2D" parent="MovablePlatform3"]

[node name="Marker2D2" type="Marker2D" parent="MovablePlatform3"]
position = Vector2(792, 0)

[node name="MovablePlatform4" parent="." node_paths=PackedStringArray("from", "to") instance=ExtResource("3_gq5gt")]
position = Vector2(-3840, 1008)
from = NodePath("Marker2D")
to = NodePath("Marker2D2")
duration = 9.0

[node name="Marker2D" type="Marker2D" parent="MovablePlatform4"]

[node name="Marker2D2" type="Marker2D" parent="MovablePlatform4"]
position = Vector2(0, -576)

[node name="MovablePlatform5" parent="." node_paths=PackedStringArray("from", "to") instance=ExtResource("3_gq5gt")]
position = Vector2(-4864, 432)
from = NodePath("Marker2D")
to = NodePath("Marker2D2")
duration = 9.0

[node name="Marker2D" type="Marker2D" parent="MovablePlatform5"]

[node name="Marker2D2" type="Marker2D" parent="MovablePlatform5"]
position = Vector2(768, 0)

[node name="PlayerGate2" parent="." instance=ExtResource("11_6oit1")]
position = Vector2(-2240, 640)
gate_length = 544.0
player_target = 1

[node name="Goal" parent="." instance=ExtResource("12_khpiu")]
position = Vector2(-5680, 352)
collision_mask = 2
player_target = 1

[node name="Goal2" parent="." instance=ExtResource("12_khpiu")]
position = Vector2(-5264, 352)
collision_mask = 4
player_target = 2

[node name="GateButton2" parent="." instance=ExtResource("9_5dc32")]
position = Vector2(-1904, 480)
player_target = 1

[node name="P1Checkpoint2" parent="." instance=ExtResource("10_tno7l")]
position = Vector2(-2144, 1096)
player_target = 1

[node name="P2Checkpoint2" parent="." instance=ExtResource("10_tno7l")]
position = Vector2(-2400, 1096)
player_target = 2

[node name="PlayerGate3" parent="." instance=ExtResource("11_6oit1")]
position = Vector2(1792, 768)
rotation = 1.5708
gate_length = 416.0
player_target = 1

[node name="Player1Spawn" type="Marker2D" parent="."]
position = Vector2(88, 784)

[node name="Player2Spawn" type="Marker2D" parent="."]
position = Vector2(240, 784)

[node name="Player1" parent="." node_paths=PackedStringArray("respawn_marker") instance=ExtResource("4_njw5h")]
position = Vector2(88, 904)
collision_layer = 2
collision_mask = 41049
player_num = 1
respawn_marker = NodePath("../Player1Spawn")

[node name="Player2" parent="." node_paths=PackedStringArray("respawn_marker") instance=ExtResource("4_njw5h")]
position = Vector2(248, 904)
collision_layer = 4
collision_mask = 41017
player_num = 2
respawn_marker = NodePath("../Player2Spawn")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GateButton" to="." method="_on_gate_button_pressed"]
[connection signal="pressed" from="GateButton2" to="." method="_on_gate_button_2_pressed"]
